# django-bulk-signals

./: .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  mise.toml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml
bulk_signals/: apps.py  signals.py
bulk_signals/tests/: apps.py  conftest.py  models.py  settings.py  test_skip.py  tests.py
bulk_signals/tests/migrations/: 0001_initial.py
tests/: apps.py  models.py  settings.py  test_skip.py  tests.py
