[project]
name = "django-bulk-signals"
version = "0.4.2"
description = "A django app for triggering signals for bulk operations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Axel Wegener", email = "pypi@sparse-space.de"}
]
keywords = ["django"]
dependencies = [
    "django>3",
]
[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-django",
    "pytest-mock",
    "django-environ",
]

[project.urls]
Homepage = "https://github.com/awmath/django-bulk-signals"
Download = "https://github.com/awmath/django-bulk-signals"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
django_find_project = false
python_files = ["test_*.py"]
pythonpath = ["."]

[tool.coverage.run]
source = ["bulk_signals"]
relative_files = true
