[metadata]
name = django-bulk-signals
version = 0.1
description = A Django app with signals for usage with django bulk queryset methods
long_description = file: README.md
url = https://github.com/awmath/django-bulk-signals
author = Axel Wegener
author_email = github@sparse-space.de
license = MIT License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3
    Framework :: Django :: 3.2
    Framework :: Django :: 4
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3
install_requires =
    Django >= 3

[coverage:run]
relative_files = True
include = bulk_signals/*
omit = *tests*

[tool:pytest]
DJANGO_SETTINGS_MODULE = bulk_signals.tests.settings
addopts = --reuse-db -p no:warnings --capture no
python_files = tests.py test_*.py
